[package]
name = "synadminctl"
version = "0.1.0"
authors = ["Florian Jacob <projects+git@florianjacob.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes"]}
http-types = "1"
http-client = { version = "1", features = ["curl_client"]}
async-h1 = "1"
# async-tls = "0.6"
async-native-tls = "0.3"
async-trait = "0.1"
# reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minireq = "2"
