[package]
name = "synadminctl"
version = "0.1.0"
authors = ["Florian Jacob <projects+git@florianjacob.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
reqwest = { version = "0.10", features = ["blocking"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"
anyhow = "1"
rpassword = "4"
hostname = "0.3"
ron = "0.5"
thiserror = "1"
structopt = "0.3"
smol = { version = "0.1", features = ["tokio02"] }
async-trait = "0.1"
# surf = "1"
