[package]
name = "synadminctl"
version = "0.1.0"
authors = ["Florian Jacob <projects+git@florianjacob.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
reqwest = { version = "0.10", features = ["blocking"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"
anyhow = "1"
rpassword = "5"
hostname = "0.3"
ron = "0.6"
thiserror = "1"
structopt = "0.3"
smol = { version = "0.3", features = ["tokio02"] }
async-trait = "0.1"
# surf = "1"
# TODO: move to ruma monorepo with features, now that ruma::ruma_api! is a thing: https://github.com/ruma/ruma/issues/123
ruma = { path = "../ruma/ruma", features = ["client-api"] }
# ruma-api = "0.17.0-alpha.1"
# ruma-api = { path = "../ruma/ruma-api" }
# # ruma-identifiers = "0.17.1"
# ruma-identifiers = { path = "../ruma/ruma-identifiers" }
# # ruma-client-api = "0.10.0-alpha.1"
# ruma-client-api = { path = "../ruma/ruma-client-api" }
# ruma-common = { path = "../ruma/ruma-common" }
js_int = "0.1"
